@startuml
skinparam classAttributeIconSize 0
abstract class Animal {
-animalCount :int
--
#run(int distance)
#swim(int distance)
-getCount() : int animalCount
#printCount()
}
class Cat{
- name : String
-catCount :int
--
#run(int distance)
#swim(int distance)
-getCount() : int catCount
#printCount()
}
class Dog{
- name : String
-dogCount :int
--
#run(int distance)
#swim(int distance)
-getCount() : int dogCount
#printCount()
}
Animal <|-- Cat
Animal <|-- Dog
@enduml